force-app/main/default/objects/PMD_AI_Interaction__c/PMD_AI_Interaction__c.object-meta.xml
<CustomObject>
    <label>PMD AI Interaction</label>
    <nameField>
        <displayFormat>AI-{00000}</displayFormat>
        <label>PMD AI Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMD AI Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>