force-app/main/default/objects/PMD_AI_Interaction__c/fields/Agentforce_Session__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Session__c</fullName>
    <label>Agentforce Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>