force-app/main/default/objects/PMD_AI_Interaction__c/fields/PMD_Finding__c.field-meta.xml
<CustomField>
    <fullName>PMD_Finding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMD Finding</label>
    <referenceTo>PMD_Finding__c</referenceTo>
    <relationshipLabel>PMD AI Interactions</relationshipLabel>
    <relationshipName>PMD_AI_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>